--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 </head>
 
 <body>
+    <input type="text">
     <main>
         <div class="container">
             <div class="scoreboard">SCORE 00</div>
