now handling inputs agnostically, i hope :)

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 
 <body>
-    <input type="text">
+    <input type="text" hidden>
     <main>
         <div class="container">
             <div class="scoreboard">SCORE 00</div>
