split to modules and some refactoring

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </main>
     <img class="carlton" src="dance.gif">
 
-    <script src="main.js"></script>
+    <script type="module" src="src/main.js"></script>
 </body>
 
 </html>
